--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -7,7 +7,6 @@
     "editor.fontFamily": "Source Code Pro, Consolas, 'Courier New', monospace",
     "editor.formatOnPaste": false,
     "editor.formatOnType": true,
-    "editor.mouseWheelZoom": true,
     "editor.quickSuggestions": {
         "other": false,
         "comments": false,
@@ -23,6 +22,8 @@
     "java.errors.incompleteClasspath.severity": "ignore",
     "java.import.gradle.enabled": false,
     "java.import.maven.enabled": false,
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.cursorStyle": "line",
     "vsicons.dontShowNewVersionMessage": true,
     "workbench.startupEditor": "none",
     "window.zoomLevel": 1
