Turn off CodeLens because of GitLens; configure Gitlens

--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -4,6 +4,7 @@
     "editor.acceptSuggestionOnEnter": "off",
     "editor.autoClosingBrackets": "never",
     "editor.autoIndent": true,
+    "editor.codeLens": false,
     "editor.dragAndDrop": false,
     "editor.fontFamily": "Source Code Pro, Consolas, 'Courier New', monospace",
     "editor.formatOnPaste": false,
@@ -20,6 +21,8 @@
     "editor.wordBasedSuggestions": false,
     "explorer.confirmDragAndDrop": false,
     "extensions.ignoreRecommendations": true,
+    "gitlens.hovers.enabled": false,
+    "gitlens.gitExplorer.files.layout": "list",
     "java.errors.incompleteClasspath.severity": "ignore",
     "java.import.gradle.enabled": false,
     "java.import.maven.enabled": false,
