--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -21,6 +21,7 @@
     "editor.wordBasedSuggestions": false,
     "explorer.confirmDragAndDrop": false,
     "extensions.ignoreRecommendations": true,
+    "gitlens.defaultDateFormat": "Y-MM-DD HH:mm:ss",
     "gitlens.hovers.enabled": false,
     "gitlens.gitExplorer.files.layout": "list",
     "java.errors.incompleteClasspath.severity": "ignore",
