--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -17,13 +17,14 @@
     "editor.renderWhitespace": "boundary",
     "editor.rulers": [72, 80, 100, 120],
     "editor.suggestOnTriggerCharacters": false,
-    "editor.tabCompletion": true,
+    "editor.tabCompletion": "on",
     "editor.wordBasedSuggestions": false,
     "explorer.confirmDragAndDrop": false,
     "extensions.ignoreRecommendations": true,
     "gitlens.defaultDateFormat": "Y-MM-DD HH:mm:ss",
     "gitlens.hovers.enabled": false,
     "gitlens.gitExplorer.files.layout": "list",
+    "java.configuration.updateBuildConfiguration": "automatic",
     "java.errors.incompleteClasspath.severity": "ignore",
     "terminal.integrated.cursorBlinking": true,
     "terminal.integrated.cursorStyle": "line",
@@ -34,5 +35,8 @@
     "window.zoomLevel": 1,
     "[scala]": {
         "editor.tabSize": 2
+    },
+    "[plaintext]": {
+        "editor.wordWrap": "on"
     }
 }
