VS Code settings

--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -20,10 +20,12 @@
     "editor.tabCompletion": "on",
     "editor.wordBasedSuggestions": false,
     "explorer.confirmDragAndDrop": false,
+    "explorer.openEditors.visible": 0,
     "extensions.ignoreRecommendations": true,
     "gitlens.defaultDateFormat": "Y-MM-DD HH:mm:ss",
     "gitlens.hovers.enabled": false,
     "gitlens.gitExplorer.files.layout": "list",
+    "gitlens.views.repositories.files.layout": "list",
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.errors.incompleteClasspath.severity": "ignore",
     "terminal.integrated.cursorBlinking": true,
