Add tab size = 2 for markdown

--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -54,6 +54,9 @@
     "[json]": {
         "editor.tabSize": 2
     },
+    "[markdown]": {
+        "editor.tabSize": 2
+    },
     "[plaintext]": {
         "editor.wordWrap": "on"
     },
