Disable VS Code suggesting html tags when something looking like a css selector is typed

--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -20,6 +20,7 @@
     "editor.suggestOnTriggerCharacters": false,
     "editor.tabCompletion": "on",
     "editor.wordBasedSuggestions": false,
+    "emmet.showExpandedAbbreviation": "never",
     "explorer.confirmDragAndDrop": false,
     "explorer.openEditors.visible": 0,
     "extensions.ignoreRecommendations": true,
