--- a/shared/etc/vscode-settings.json
+++ b/shared/etc/vscode-settings.json
@@ -4,16 +4,10 @@
   "editor.acceptSuggestionOnEnter": "off",
   "editor.autoClosingBrackets": "never",
   "editor.autoIndent": true,
-  "editor.codeLens": false,
   "editor.dragAndDrop": false,
   "editor.fontFamily": "Source Code Pro, Consolas, monospace",
   "editor.formatOnPaste": false,
   "editor.formatOnType": true,
-  "editor.quickSuggestions": {
-    "other": false,
-    "comments": false,
-    "strings": false
-  },
   "editor.renderFinalNewline": true,
   "editor.renderWhitespace": "boundary",
   "editor.rulers": [
@@ -26,7 +20,8 @@
   "editor.suggestSelection": "first",
   "editor.tabCompletion": "on",
   "editor.wordBasedSuggestions": false,
-  "emmet.showExpandedAbbreviation": "never",
+  "emmet.showExpandedAbbreviation": "inMarkupAndStylesheetFilesOnly",
+  "explorer.autoReveal": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.openEditors.visible": 0,
   "extensions.ignoreRecommendations": true,
@@ -39,12 +34,15 @@
   "java.configuration.checkProjectSettingsExclusions": false,
   "java.configuration.updateBuildConfiguration": "automatic",
   "java.errors.incompleteClasspath.severity": "ignore",
+  "java.format.settings.profile": "onap-java-formatter",
+  "java.format.settings.url": "https://gerrit.onap.org/r/gitweb?p=aai/aai-common.git;a=blob_plain;f=onap-java-formatter.xml;hb=refs/heads/master",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.scrollback": 10000,
   "vsicons.dontShowNewVersionMessage": true,
   "workbench.editor.enablePreviewFromQuickOpen": false,
   "workbench.iconTheme": "vscode-icons",
+  "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
   "window.zoomLevel": 1,
   "[csharp]": {
